# llama.cpp

./: .gitignore  CMakePresets.json
common/: arg.cpp  console.cpp
examples/: CMakeLists.txt
examples/main/: main.cpp
examples/skyllama/: CMakeLists (2).txt  CMakeLists.txt  DialogueList.cpp  DialogueList.h  llm.cpp  llm_empty.cpp  plugin.cpp
